--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:onlineShop;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE;AUTO_SERVER=TRUE
 spring.datasource.username=ruxi
 spring.datasource.password=incorrect
+spring.datasource.url=jdbc:h2:~/shop-database/h2;DB_CLOSE_ON_EXIT=FALSE
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.driverClassName=org.h2.Driver
+spring.flyway.baselineOnMigrate = true
