--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.datasource.username=ruxi
 spring.datasource.password=incorrect
-spring.datasource.url=jdbc:h2:~/shop-database/h2;DB_CLOSE_ON_EXIT=FALSE
+
+spring.security.user.name=ruxi
+spring.security.user.password=incorrect
+
+spring.datasource.url=jdbc:h2:~/shop-database/h2;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.driverClassName=org.h2.Driver
 spring.flyway.baselineOnMigrate = true
+
