finished chapters 6 and 7

--- a/src/test/java/ro/msg/learning/shop/resources/application.properties
+++ b/src/test/java/ro/msg/learning/shop/resources/application.properties
@@ -1,8 +1,10 @@
+spring.profiles.active=security_basic
+
 spring.datasource.username=ruxi
 spring.datasource.password=incorrect
 
-spring.security.user.name=ruxi
-spring.security.user.password=incorrect
+#spring.security.user.name=ruxi
+#spring.security.user.password=incorrect
 
 spring.datasource.url=jdbc:h2:~/shop-database/h2;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
 
@@ -10,4 +12,3 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.driverClassName=org.h2.Driver
 spring.flyway.baselineOnMigrate = true
-
