code refactored after code review

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.profiles.active=security_basic
+spring.profiles.active=security_form
+locationStrategy.type=singleLocation
 
 spring.datasource.username=ruxi
 spring.datasource.password=incorrect
