--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
+#--security
 spring.profiles.active=security_form
+
+#--strategy
 locationStrategy.type=singleLocation
 
+#--database
 spring.datasource.username=ruxi
 spring.datasource.password=incorrect
-
-#spring.security.user.name=ruxi
-#spring.security.user.password=incorrect
 
 spring.datasource.url=jdbc:h2:~/shop-database/h2;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
 
@@ -13,3 +14,19 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.driverClassName=org.h2.Driver
 spring.flyway.baselineOnMigrate = true
+
+#--mail
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=587
+spring.mail.username=a93b0cd11d174b
+spring.mail.password=3492b6d86fdf3b
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.from=onlineShop@msg.com
+spring.mail.subject=Confirmation mail for Online Shop Order
+spring.mail.bodyPath=templates/mailBody.html
+spring.mail.textType=html
+
+#--security - auto
+#spring.security.user.name=ruxi
+#spring.security.user.password=incorrect
