populationg DB for tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #--security
-spring.profiles.active=security_form
+spring.profiles.active=security_basic
 
 #--strategy
 locationStrategy.type=singleLocation
@@ -27,5 +27,5 @@ spring.mail.subject=Confirmation mail for Online Shop Order
 spring.mail.bodyPath=templates/mailBody.html
 
 #--security - auto
-#spring.security.user.name=ruxi
-#spring.security.user.password=incorrect
+spring.security.user.name=ruxi
+spring.security.user.password=incorrect
